[package]
name = "rp-dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.5" }
cortex-m = { version = "0.7.6"}
cortex-m-rt = "0.7.3"
rp2040-boot2 = "0.2.1"
rp2040-hal = { version = "0.9.0", features = ["rp2040-e5"] }
pio-proc = "0.2.2"
pio = "0.2.1"
# embedded-alloc = "0.5.0"
