[package]
name = "dht-pio"
version = "0.6.0"
edition = "2021"

license = "MIT"
description = "A DHT Implementation using PIO (Programmable Input/Output), tested on Rasberry Pi Pico"
homepage = "https://github.com/jnthbdn/rs-dht-pio"
repository = "https://github.com/jnthbdn/rs-dht-pio"
readme = "readme.md"
keywords = ["dht", "pico", "pico2", "pio"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
rp2040 = ["dep:rp2040-hal"]
rp235x = ["dep:rp235x-hal"]
defmt = ["dep:defmt"]

[dependencies]
embedded-hal = "1.0.0"

defmt = { version = "0.3", optional = true }

pio-proc = "0.2.2"
pio = "0.2.1"

[target.'thumbv6m-none-eabi'.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rp2040-hal = { version = "0.10.0", optional = true }

[target.'thumbv8m.main-none-eabihf'.dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7"
rp235x-hal = { version = "0.2.0", optional = true }

[target.'riscv32imac-unknown-none-elf'.dependencies]
riscv = "0.12"
riscv-rt = "0.12"
rp235x-hal = { version = "0.2.0", optional = true }

[target.'thumbv6m-none-eabi'.dev-dependencies]
rp-pico = { version = "0.9.0", features = ["rp2040-e5"] }
embedded-alloc = "0.6.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
panic-halt = "0.2"
defmt = "0.3"
defmt-rtt = "0.4.0"

[target.'thumbv8m.main-none-eabihf'.dev-dependencies]
rp235x-hal = { version = "0.2.0", features = ["binary-info", "rt", "defmt", "critical-section-impl" ] }
panic-halt = "0.2"
defmt = "0.3"
defmt-rtt = "0.4.0"

[target.'riscv32imac-unknown-none-elf'.dev-dependencies]
rp235x-hal = { version = "0.2.0", features = ["binary-info", "rt", "defmt", "critical-section-impl" ] }
panic-halt = "0.2"
defmt = "0.3"
defmt-rtt = "0.4.0"

[[example]]
name = "rp-pico-dht22"
path = "example/rp-pico/rp_pico_dht22.rs"
required-features = ["rp2040", "defmt"]

[[example]]
name = "rp-pico-dht11"
path = "example/rp-pico/rp_pico_dht11.rs"
required-features = ["rp2040", "defmt"]

[[example]]
name = "rp235x-dht22"
path = "example/rp235x/rp235x_dht22.rs"
required-features = ["rp235x", "defmt"]

[[example]]
name = "rp235x-dht11"
path = "example/rp235x/rp235x_dht11.rs"
required-features = ["rp235x", "defmt"]
